--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "nodemon server",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +32,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.0.2",
+    "express": "^4.17.1",
+    "nodemon": "^2.0.2",
+    "request": "^2.88.0"
+  },
+  "proxy": "http://localhost:3001/"
 }
